@@ -116,12 +116,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-   *) core: Avoid duplicate HEAD in Allow header. PR 61207.
-      trunk patch: http://svn.apache.org/r1799784
-                   http://svn.apache.org/r1799786 (CHANGES entry)
-      2.4.x patch: svn merge -c 1799784,1799786 ^/httpd/httpd/trunk .
-      +1: jailletc36, rpluem, jim
-
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
